@@ -22,12 +22,12 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>23.0.1</version>
+      <version>17.0.12</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>23.0.1</version>
+      <version>17.0.6</version>
     </dependency>
     <dependency>
       <groupId>org.controlsfx</groupId>
@@ -82,7 +82,6 @@
         <configuration>
           <source>24</source>
           <target>24</target>
-            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
